--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "@capacitor/status-bar": "5.0.6",
     "@ionic/vue": "^7.0.0",
     "@ionic/vue-router": "^7.0.0",
+    "apexcharts": "^3.43.0",
     "ionicons": "^7.0.0",
     "vue": "^3.2.45",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "vue3-apexcharts": "^1.4.4"
   },
   "devDependencies": {
     "@capacitor/cli": "5.5.0",
