--- a/package.json
+++ b/package.json
@@ -12,15 +12,20 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@capacitor/app": "5.0.6",
+    "@capacitor/android": "^5.5.0",
+    "@capacitor/app": "^5.0.6",
+    "@capacitor/camera": "^5.0.7",
     "@capacitor/core": "5.5.0",
-    "@capacitor/haptics": "5.0.6",
-    "@capacitor/keyboard": "5.0.6",
-    "@capacitor/status-bar": "5.0.6",
+    "@capacitor/filesystem": "^5.1.4",
+    "@capacitor/haptics": "^5.0.6",
+    "@capacitor/keyboard": "^5.0.6",
+    "@capacitor/status-bar": "^5.0.6",
     "@ionic/vue": "^7.0.0",
     "@ionic/vue-router": "^7.0.0",
     "apexcharts": "^3.43.0",
     "ionicons": "^7.0.0",
+    "moment": "^2.29.4",
+    "moment-timezone": "^0.5.43",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6",
     "vue3-apexcharts": "^1.4.4"
@@ -35,6 +40,7 @@
     "eslint": "^8.35.0",
     "eslint-plugin-vue": "^9.9.0",
     "jsdom": "^22.1.0",
+    "sass": "^1.69.4",
     "typescript": "^5.1.6",
     "vite": "^4.3.9",
     "vitest": "^0.32.2",
