--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
+  "include": ["@/**/*.ts", "@/**/*.d.ts", "@/**/*.tsx", "@/**/*.vue"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
