--- a/package.json
+++ b/package.json
@@ -23,12 +23,15 @@
     "@ionic/vue": "^7.0.0",
     "@ionic/vue-router": "^7.0.0",
     "apexcharts": "^3.43.0",
+    "axios": "^1.5.1",
     "ionicons": "^7.0.0",
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.43",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6",
-    "vue3-apexcharts": "^1.4.4"
+    "vue3-apexcharts": "^1.4.4",
+    "vuex": "^4.1.0",
+    "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
     "@capacitor/cli": "5.5.0",
