--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build:client": "vue-tsc && vite build --outDir dist/client",
-    "build:server": "vue-tsc && vite build --outDir dist/server --ssr src/server.js",
+    "build:server": "vue-tsc && vite build --outDir dist/server --ssr server.js",
     "deploy": "pm2 start ecosystem.config.cjs --env production",
     "preview": "vite preview",
     "test:e2e": "cypress run",
