changes for npm

--- a/package.json
+++ b/package.json
@@ -26,9 +26,12 @@
     "@ionic/vue-router": "^7.0.0",
     "apexcharts": "^3.43.0",
     "axios": "^1.5.1",
+    "compression": "^1.7.4",
+    "express": "^4.18.2",
     "ionicons": "^7.0.0",
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.43",
+    "sirv": "^2.0.3",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6",
     "vue3-apexcharts": "^1.4.4",
